# wimbledon-project

./: .gitignore  DESIGN.md  DESIGN_v2.md  README.md  pyproject.toml
api/: main.py
notebooks/: 01_eda.py
scripts/: calibration_report.py  fit_predictive.py  fit_tendency.py  make_synthetic_data.py
src/wimbledon/: __init__.py  calibration.py  data.py  decisions.py  features.py  models.py  predictive.py
tests/: test_calibration.py  test_data.py  test_features.py  test_predictive.py
web/: package-lock.json
web/app/: layout.tsx  page.tsx
