[project]
name = "wimbledon"
version = "0.1.0"
description = "Wimbledon predictive + prescriptive (serve placement) models"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pymc>=5.16",
    "arviz>=0.19",
    "h5netcdf>=1.3",
    "h5py>=3.11",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "scikit-learn>=1.4",
    "joblib>=1.4",
    "matplotlib>=3.9",
]

[dependency-groups]
dev = ["ipykernel", "pytest>=8", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wimbledon"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
